--- a/StiriDinRomania/src/main/res/layout/fragment_newsgroup.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_newsgroup.xml
@@ -4,19 +4,19 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:background="@android:color/darker_gray"
-              android:padding="10dp"
               android:layout_height="match_parent">
 
     <ListView
+            android:paddingLeft="@dimen/left_and_right_margin"
+            android:paddingRight="@dimen/left_and_right_margin"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             tools:listitem="@layout/list_row_newsgroup"
-            android:background="@android:color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/newsGroupListView"
             android:layout_gravity="left|center_vertical"
-            android:dividerHeight="10dp"
-            android:divider="@android:color/darker_gray"
+            android:dividerHeight="1dp"
             android:drawSelectorOnTop="false"/>
 
 </LinearLayout>
