--- a/StiriDinRomania/src/main/res/layout/list_row_allgroups.xml
+++ b/StiriDinRomania/src/main/res/layout/list_row_allgroups.xml
@@ -7,17 +7,21 @@
                 android:layout_height="match_parent">
     <TextView
 
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/lorem_w_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/groupTitle"/>
+            android:id="@+id/groupTitle"
+
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textSize="@dimen/large_font"/>
 
     <TextView
             android:id="@+id/numberOfGroups"
             android:text="@string/lorem_w_5"
             android:layout_below="@id/groupTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textStyle="italic"/>
 
 </RelativeLayout>
