--- a/StiriDinRomania/src/main/res/values/dimens.xml
+++ b/StiriDinRomania/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="left_and_right_margin">16dp</dimen>
     <dimen name="top_and_bottom_margin">4dp</dimen>
+    <dimen name="large_font">22sp</dimen>
+    <dimen name="medium_font">18sp</dimen>
 
 </resources>
