--- a/StiriDinRomania/src/main/res/layout/activity_newsitem_list.xml
+++ b/StiriDinRomania/src/main/res/layout/activity_newsitem_list.xml
@@ -1,10 +1,10 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/newsitem_list"
-    android:name="com.vladstoick.Fragments.NewsItemListFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    tools:context=".NewsItemListActivity"
-    tools:layout="@android:layout/list_content" />
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/newsitem_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        tools:context=".NewsItemListActivity"
+        tools:layout="@android:layout/list_content" />
