added tablet ui for first page

--- a/StiriDinRomania/src/main/res/layout/activity_newsgroup_twopane.xml
+++ b/StiriDinRomania/src/main/res/layout/activity_newsgroup_twopane.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginLeft="@dimen/left_and_right_margin"
+    android:layout_marginRight="@dimen/left_and_right_margin"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -23,16 +23,17 @@
 
     <fragment
         android:id="@+id/newsgroup_list"
-        android:name="com.mycompany.myapp.NewsGroupListFragment"
+        android:name="com.vladstoick.Fragments.NewsGroupListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_marginRight="@dimen/left_and_right_margin"
         tools:layout="@android:layout/list_content" />
 
     <FrameLayout
         android:id="@+id/newsgroup_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="1" />
 
 </LinearLayout>
