--- a/StiriDinRomania/src/main/res/layout/fragment_newsitem_detail.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_newsitem_detail.xml
@@ -1,8 +1,28 @@
-<WebView
+<LinearLayout
+        android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/news_item_detail_webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".NewsItemDetailActivity"
-        tools:ignore="MergeRootFrame"/>
+        android:background="@android:color/white"
+        android:layout_height="match_parent">
+    <TextView
+            android:paddingLeft="@dimen/left_and_right_margin"
+            android:paddingRight="@dimen/left_and_right_margin"
+            android:layout_marginBottom="@dimen/top_and_bottom_margin"
+            android:layout_marginTop="@dimen/top_and_bottom_margin"
+            android:id="@+id/news_item_detail_title"
+            android:text="@string/lorem_w_5"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textSize="@dimen/large_font"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
+    <WebView
+            android:paddingLeft="@dimen/left_and_right_margin"
+            android:paddingRight="@dimen/left_and_right_margin"
+            android:id="@+id/news_item_detail_webView"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            tools:context=".NewsItemDetailActivity"
+            tools:ignore="MergeRootFrame"/>
+</LinearLayout>
