--- a/StiriDinRomania/src/main/res/values/style.xml
+++ b/StiriDinRomania/src/main/res/values/style.xml
@@ -11,7 +11,7 @@
     </style>
     <style name="Widget.Styled.ActionBar.TextStyle">
         <item name="android:textColor">@color/android:white</item>
-        <item name="android:fontFamily">sans-serif-thin</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">@dimen/medium_font</item>
     </style>
 </resources>
