--- a/StiriDinRomania/src/main/res/layout/activity_login.xml
+++ b/StiriDinRomania/src/main/res/layout/activity_login.xml
@@ -21,11 +21,10 @@
             <!--android:layout_height="wrap_content"/>-->
     <com.facebook.widget.LoginButton
             android:id="@+id/login_facebook"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:minWidth="250dp" />
+            android:layout_marginTop="30dp" />
     <com.google.android.gms.common.SignInButton
             android:id="@+id/login_google"
             android:layout_width="250dp"
