--- a/StiriDinRomania/src/main/res/menu/popupmenu_newsgroup.xml
+++ b/StiriDinRomania/src/main/res/menu/popupmenu_newsgroup.xml
@@ -2,6 +2,9 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="sgjh"
-        android:id="@+id/delete_action"/>
+        android:title="@string/delete"
+        android:id="@+id/action_delete"/>
+    <item
+        android:title="@string/rename"
+        android:id="@+id/action_rename"/>
 </menu>
