--- a/StiriDinRomania/src/main/res/layout/list_row_newsgroup.xml
+++ b/StiriDinRomania/src/main/res/layout/list_row_newsgroup.xml
@@ -2,27 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_gravity="center_vertical"
+                android:descendantFocusability="blocksDescendants"
                 android:paddingBottom="@dimen/top_and_bottom_margin"
                 android:paddingTop="@dimen/top_and_bottom_margin"
                 android:layout_height="wrap_content">
     <ImageButton
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:scaleType="centerInside"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:id="@+id/overflow_icon"
             android:background="@null"
             android:src="@drawable/ic_action_overflow"
-            android:padding="10dp"
-            android:paddingTop="0dp"
+            android:paddingLeft="30dp"
+            android:paddingBottom="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <TextView
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:layout_toLeftOf="@id/overflow_icon"
+            android:layout_marginRight="30dp"
             android:text="@string/lorem_w_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,8 +29,6 @@
             android:textSize="@dimen/large_font"/>
 
     <TextView
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:layout_toLeftOf="@id/overflow_icon"
             android:id="@+id/numberOfGroups"
             android:text="@string/lorem_w_5"
