--- a/StiriDinRomania/src/main/res/layout/fragment_search_results.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_search_results.xml
@@ -2,15 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+
     tools:context=".SearchResultsActivity$DummySectionFragment">
-
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <ListView
+            android:paddingLeft="@dimen/left_and_right_margin"
+            android:paddingRight="@dimen/left_and_right_margin"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/newsitem_listview"/>
 </RelativeLayout>
