Added fragment for recommended for future:

--- a/StiriDinRomania/src/main/res/layout/fragment_add_elements_manually.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_add_elements_manually.xml
@@ -9,6 +9,7 @@
               android:layout_height="match_parent">
 
     <LinearLayout
+            android:layout_marginTop="@dimen/top_and_bottom_margin"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:gravity="center_vertical"
