--- a/StiriDinRomania/src/main/res/layout/activity_newsitem_detail.xml
+++ b/StiriDinRomania/src/main/res/layout/activity_newsitem_detail.xml
@@ -1,7 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:id="@+id/newsitem_detail_container"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".NewsItemDetailActivity"
-             tools:ignore="MergeRootFrame"/>
+<android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/newsitem_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
