--- a/StiriDinRomania/src/main/res/layout/fragment_newsitem_detail.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_newsitem_detail.xml
@@ -22,7 +22,6 @@
                 <TextView
                     android:layout_marginLeft="@dimen/left_and_right_margin"
                     android:layout_marginRight="@dimen/left_and_right_margin"
-                    android:layout_marginBottom="@dimen/top_and_bottom_margin"
                     android:layout_marginTop="@dimen/top_and_bottom_margin"
                     android:id="@+id/news_item_detail_title"
                     android:text="@string/lorem_w_5"
@@ -31,6 +30,18 @@
                     android:textSize="@dimen/large_font"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"/>
+                <TextView
+                        android:id="@+id/news_item_detail_date"
+                        android:text="@string/lorem_w_5"
+                        android:fontFamily="sans-serif-condensed"
+                        android:textSize="@dimen/medium_font"
+                        android:textStyle="italic"
+                        android:layout_marginLeft="@dimen/left_and_right_margin"
+                        android:layout_marginRight="@dimen/left_and_right_margin"
+                        android:layout_marginBottom="@dimen/top_and_bottom_margin"
+                        android:layout_marginTop="@dimen/top_and_bottom_margin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
                 <TextView
 
                     android:id="@+id/news_item_detail_paperized"
