--- a/StiriDinRomania/src/main/res/menu/news_group_list_activity.xml
+++ b/StiriDinRomania/src/main/res/menu/news_group_list_activity.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/search"
           android:title="@string/search"
           android:icon="@drawable/action_search"
-          android:showAsAction="collapseActionView|ifRoom"
+          android:showAsAction="collapseActionView|always"
           android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
     <item            android:id="@+id/action_logout"
             android:orderInCategory="102"
