--- a/StiriDinRomania/src/main/res/menu/news_group_list_fragment.xml
+++ b/StiriDinRomania/src/main/res/menu/news_group_list_fragment.xml
@@ -2,16 +2,17 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-            android:id="@+id/action_add"
-            android:orderInCategory="100"
-            android:showAsAction="ifRoom"
-            android:icon="@drawable/content_new"
-            android:title="@string/add"/>
-    <item
             android:id="@+id/action_refresh"
-            android:orderInCategory="101"
-            android:showAsAction="ifRoom"
+            android:orderInCategory="99"
+            android:showAsAction="always"
             android:icon="@drawable/navigation_refresh"
             android:title="@string/update_data"/>
+    <item
+            android:id="@+id/action_add"
+            android:orderInCategory="100"
+            android:showAsAction="always"
+            android:icon="@drawable/content_new"
+            android:title="@string/add"/>
+
 
 </menu>
