--- a/StiriDinRomania/src/main/res/values/dimens.xml
+++ b/StiriDinRomania/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="top_and_bottom_margin">4dp</dimen>
     <dimen name="ultra_large_font">40sp</dimen>
     <dimen name="large_font">22sp</dimen>
+    <dimen name="large_smaller_font">20sp</dimen>
     <dimen name="medium_font">18sp</dimen>
     <dimen name="small_font">14sp</dimen>
     <dimen name="logo_size">250dp</dimen>
