warning shown for no news sources

--- a/StiriDinRomania/src/main/res/layout/fragment_newsgroup_list.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_newsgroup_list.xml
@@ -5,6 +5,13 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <TextView
+            android:textSize="@dimen/large_smaller_font"
+            android:id="@+id/warning"
+            android:padding="@dimen/left_and_right_margin"
+            android:text="@string/nofeedsadded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     <ListView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
