--- a/StiriDinRomania/src/main/res/menu/news_group_list_activity.xml
+++ b/StiriDinRomania/src/main/res/menu/news_group_list_activity.xml
@@ -2,6 +2,7 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/search"
+          android:orderInCategory="1"
           android:title="@string/search"
           android:icon="@drawable/action_search"
           android:showAsAction="collapseActionView|always"
