--- a/StiriDinRomania/src/main/res/menu/news_item_detail_fragment.xml
+++ b/StiriDinRomania/src/main/res/menu/news_item_detail_fragment.xml
@@ -6,5 +6,11 @@
             android:title="@string/see_full_article"
             android:icon="@drawable/location_web_site"
             android:orderInCategory="100"
-            android:showAsAction="ifRoom"/>
+            android:showAsAction="always"/>
+    <item
+            android:id="@+id/action_share"
+            android:title="@string/share"
+            android:orderInCategory="101"
+            android:icon="@drawable/action_share"
+            android:showAsAction="always"/>
 </menu>
