--- a/StiriDinRomania/src/main/res/layout/fragment_add_elemens_category.xml
+++ b/StiriDinRomania/src/main/res/layout/fragment_add_elemens_category.xml
@@ -6,6 +6,8 @@
               android:layout_height="match_parent">
 
     <ListView
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/categoriesListView"/>
